--- a/movie-recommendation-service/pom.xml
+++ b/movie-recommendation-service/pom.xml
@@ -44,6 +44,11 @@
             </exclusions>
         </dependency>
         <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.1</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
