--- a/movie-recommendation-service/pom.xml
+++ b/movie-recommendation-service/pom.xml
@@ -9,20 +9,20 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.sefa.challenge</groupId>
-    <artifactId>book-recommendation-service</artifactId>
+    <artifactId>movie-recommendation-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>book-recommendation-service</name>
-    <description>A Simple Book Recommendation Service</description>
+    <name>movie-recommendation-service</name>
+    <description>Movie Recommendation Service</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
-    <dependencies>
+	  <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -42,6 +42,11 @@
                     <artifactId>android-json</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
         </dependency>
         <dependency>
 		    <groupId>com.google.code.gson</groupId>
