created registration and login with jwt

--- a/movie-recommendation-service/src/main/resources/application.properties
+++ b/movie-recommendation-service/src/main/resources/application.properties
@@ -13,7 +13,12 @@ spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
 
 spring.jpa.open-in-view=false
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 
-server.port = 2233
+server.port = 2235
+
+spring.security.enabled=false
+
+diplomski.app.jwtSecret= lele
+diplomski.app.jwtExpirationMs= 86400000
